--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
-    "@tanstack/react-query": "5.62.8",
-    "@tanstack/react-query-devtools": "^5.62.8",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.7.9",
     "emotion-reset": "^3.0.1",
+    "lucide-react": "^0.482.0",
     "next": "14.0.2",
     "react": "18.2.0",
     "react-daum-postcode": "^3.2.0",
