--- a/.github/workflows/bigbro-ci.yml
+++ b/.github/workflows/bigbro-ci.yml
@@ -39,7 +39,7 @@ jobs:
           title: '✅ BIGBRO_CLIENT CI'
           status: ${{ job.status }}
           content: 'PR을 확인해주세요.'
-          username: BIGBRO_CLIENT CI bot
+          username: BIGBRO_CLIENT bot
           url: 'https://github.com/bigbroCO-team/bigbro_company_client'
           color: 4CAF50
 
@@ -51,6 +51,6 @@ jobs:
           title: '❌ BIGBRO_CLIENT CI'
           content: '에러를 확인해주세요.'
           status: ${{ job.status }}
-          username: BIGBRO_CLIENT CI bot
+          username: BIGBRO_CLIENT bot
           url: 'https://github.com/bigbroCO-team/bigbro_company_client'
           color: e74c3c
