--- a/.github/workflows/bigbro-cd.yml
+++ b/.github/workflows/bigbro-cd.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -i "SSH_PEM_KEY.pem" ubuntu@${{secrets.EC2_IP}} << EOF
+          ssh -o StrictHostKeyChecking=no -i "SSH_PEM_KEY.pem" ubuntu@${{secrets.EC2_IP}} << EOF
             cd /home/ubuntu/app
             docker pull ${{secrets.DOCKER_USERNAME}}/bigbro_client:latest
             docker run -d \
