--- a/.github/workflows/bigbro-cd.yml
+++ b/.github/workflows/bigbro-cd.yml
@@ -36,7 +36,7 @@ jobs:
           key: ${{ secrets.SSH_PEM_KEY }}
           script: |
             set -e
-            ./script/deploy.sh
+            ../../script/deploy.sh
 
       - name: Success Discord Notification
         uses: sarisia/actions-status-discord@v1.11.0
