--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
+    "@tosspayments/tosspayments-sdk": "^2.3.5",
     "axios": "^1.7.9",
     "emotion-reset": "^3.0.1",
     "lucide-react": "^0.482.0",
